32_kvs/grade.txt
Grading at Wed Jan  1 18:31:19 UTC 2020
Attempting to compile:
kv.c: In function ‘lookupValue’:
kv.c:70:10: error: unused variable ‘out’ [-Werror=unused-variable]
   char * out;
          ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
